tests/fixtures/errors/invalid_unmatched_enduml_with_suffix.puml
@enduml trailing
@startuml
A -> B : one
@enduml
